--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>For Momina Hussain - My Love</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Scheherazade+New&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Scheherazade New', serif;
-      background: linear-gradient(to right, #ffe6f0, #fff0f5);
+      background: linear-gradient(to bottom right, #fef1f5, #ffe4ec);
+      overflow-x: hidden;
     }
     .urdu {
       font-family: 'Scheherazade New', serif;
@@ -18,45 +20,118 @@
     .love-font {
       font-family: 'Great Vibes', cursive;
     }
+    .heart {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: #ff4d6d;
+      transform: rotate(45deg);
+      animation: float 2s ease-out forwards;
+      opacity: 0.8;
+    }
+    .heart::before,
+    .heart::after {
+      content: '';
+      width: 20px;
+      height: 20px;
+      background: #ff4d6d;
+      border-radius: 50%;
+      position: absolute;
+    }
+    .heart::before {
+      top: -10px;
+      left: 0;
+    }
+    .heart::after {
+      left: -10px;
+      top: 0;
+    }
+    @keyframes float {
+      0% {
+        opacity: 0.8;
+        transform: translateY(0) rotate(45deg);
+      }
+      100% {
+        opacity: 0;
+        transform: translateY(-100px) rotate(45deg) scale(0.5);
+      }
+    }
+    .card {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
+    }
+    .btn {
+      transition: all 0.3s ease;
+    }
+    .btn:hover {
+      transform: scale(1.1);
+      box-shadow: 0 4px 15px rgba(255, 77, 109, 0.5);
+    }
   </style>
 </head>
-<body class="min-h-screen flex flex-col items-center justify-center px-6 py-10">
-  <div class="bg-white shadow-2xl rounded-3xl p-10 max-w-3xl text-center space-y-6 border-4 border-pink-200">
+<body class="min-h-screen flex flex-col items-center justify-center px-6 py-12">
+  <div class="bg-white shadow-2xl rounded-3xl p-12 max-w-4xl text-center space-y-8 border-4 border-pink-100 card relative">
+    <h1 class="text-5xl md:text-6xl text-pink-600 love-font animate-pulse">For My Love, Momina Hussain 💖</h1>
 
-    <h1 class="text-4xl md:text-5xl text-pink-600 love-font">For My Love, Momina Hussain 💖</h1>
-
-    <p class="text-lg md:text-xl italic text-gray-700">
-      You are my only wish, my dua, my dream. I want Nikah with you. Forever.
+    <p class="text-xl md:text-2xl italic text-gray-600 leading-relaxed">
+      You are my only wish, my dua, my dream. I want Nikah with you, to grow old with you, and to raise our children together. Forever.
     </p>
 
     <div class="text-xl text-gray-800">
       <p>💌 <strong>From Nawaz:</strong> Tum meri duniya ho, meri subah, meri raat, meri har dua.</p>
     </div>
 
-    <div class="border-t border-pink-300 pt-6">
-      <h2 class="text-2xl text-pink-500 font-semibold mb-4">🌹 Urdu Shayari for You</h2>
+    <div class="border-t border-pink-200 pt-6">
+      <h2 class="text-3xl text-pink-500 font-semibold mb-4 love-font">🌹 Urdu Shayari for You</h2>
       <div class="urdu text-2xl text-gray-800 space-y-4 leading-relaxed">
-        <p>تم مسکراؤ تو بہار آئے، تم روتی ہو تو دل بھیگ جائے</p>
-        <p>تم سے نکاح میرا خواب نہیں، میری زندگی کی سب سے پاک دعا ہے</p>
-        <p>تم ہو تو سب کچھ ہے، تم نہ ہو تو کچھ بھی نہیں</p>
+        <p class="hover:text-pink-600 transition-colors">تم مسکراؤ تو بہار آئے، تم روتی ہو تو دل بھیگ جائے</p>
+        <p class="hover:text-pink-600 transition-colors">تم سے نکاح میرا خواب نہیں، میری زندگی کی سب سے پاک دعا ہے</p>
+        <p class="hover:text-pink-600 transition-colors">تم ہو تو سب کچھ ہے، تم نہ ہو تو کچھ بھی نہیں</p>
+        <p class="hover:text-pink-600 transition-colors">ہر پل تم سے محبت بڑھتی ہے، ہر سانس تمہارا نام لکھتی ہے</p>
+        <p class="hover:text-pink-600 transition-colors">تمہارے ساتھ بوڑھا ہونا، میری سب سے خوبصورت خواہش ہے</p>
+        <p class="hover:text-pink-600 transition-colors">ہمارے بچوں کی ہنسی، تمہاری مسکان سے شروع ہوگی</p>
       </div>
     </div>
 
-    <div class="pt-6 border-t border-pink-300">
-      <h2 class="text-2xl text-pink-500 font-semibold mb-4">💫 Slogans for My Princess</h2>
-      <ul class="text-lg text-gray-700 space-y-2">
-        <li>👑 Momina — Meri Rooh Ki Roshni</li>
-        <li>🌙 Tum Meri Qismat Ka Chand Ho</li>
-        <li>🕊️ Mera Har Saans Tumse Juda Hai</li>
-        <li>💍 Nikah ke siwa kuch nahi chahiye</li>
+    <div class="pt-6 border-t border-pink-200">
+      <h2 class="text-3xl text-pink-500 font-semibold mb-4 love-font">💫 Slogans for My Princess</h2>
+      <ul class="text-lg text-gray-700 space-y-3">
+        <li class="hover:text-pink-600 transition-colors">👑 Momina — Meri Rooh Ki Roshni</li>
+        <li class="hover:text-pink-600 transition-colors">🌙 Tum Meri Qismat Ka Chand Ho</li>
+        <li class="hover:text-pink-600 transition-colors">🕊️ Mera Har Saans Tumse Juda Hai</li>
+        <li class="hover:text-pink-600 transition-colors">💍 Nikah ke siwa kuch nahi chahiye</li>
+        <li class="hover:text-pink-600 transition-colors">💖 Tumse Mohabbat, Aaj aur Hamesha</li>
+        <li class="hover:text-pink-600 transition-colors">👶 Hamare Bacchon ka Bhavishya, Tumse Hai</li>
+        <li class="hover:text-pink-600 transition-colors">🌟 Sath Jiyenge, Sath Budhe Honge</li>
       </ul>
     </div>
 
-    <div class="mt-8 bg-pink-100 p-4 rounded-xl shadow-inner text-pink-700 text-lg">
-      <p><strong>Nawaz ka Wada:</strong> Tumse Mohabbat, Tumse Wafa, Tumse Nikah — Sirf Tum.</p>
+    <div class="mt-8 bg-pink-50 p-6 rounded-xl shadow-inner text-pink-700 text-lg">
+      <p><strong>Nawaz ka Wada:</strong> Tumse Mohabbat, Tumse Wafa, Tumse Nikah, Tumse Zindagi — Sirf Tum.</p>
     </div>
 
-    <p class="mt-6 text-sm text-gray-400">Made with infinite love by Nawaz 💗</p>
+    <button id="loveButton" class="btn bg-pink-500 text-white px-8 py-3 rounded-full text-lg font-semibold mt-6 hover:bg-pink-600">
+      Send My Love 💖
+    </button>
+
+    <p class="mt-8 text-sm text-gray-400">Made with infinite love by Nawaz 💗</p>
   </div>
+
+  <script>
+    const button = document.getElementById('loveButton');
+    button.addEventListener('click', () => {
+      for (let i = 0; i < 10; i++) {
+        const heart = document.createElement('div');
+        heart.className = 'heart';
+        heart.style.left = `${Math.random() * window.innerWidth}px`;
+        heart.style.top = `${Math.random() * window.innerHeight}px`;
+        document.body.appendChild(heart);
+        setTimeout(() => heart.remove(), 2000);
+      }
+    });
+  </script>
 </body>
 </html>
