Update Q&A option from 'Momina' to 'nawaz khan (sabse worst)'

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <div class="qna-options" id="qna-options">
                 <div class="qna-option" data-answer="0">Asad</div>
                 <div class="qna-option" data-answer="1">Moiz</div>
-                <div class="qna-option" data-answer="2">Momina</div>
+                <div class="qna-option" data-answer="2">nawaz khan (sabse worst)</div>
             </div>
         </div>
     </div>
