Update quiz options in index.html

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 options: [
                     "Asad",
                     "Moiz",
-                    "Momina"
+                    "Nawaz sabse worst"
                 ],
                 correct: 2
             },
